-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
PPC client
-
3
-
8173
We updated a client to 2.3.64-4chaos and tried to mount a 2.3.63-6chaos server. The mount fails with
LustreError: 15c-8: MGC172.20.20.201@o2ib500: The configuration from log 'fsv-client' failed (-2). This may be the result of communication errors between this node and the MGS, a bad configuration, or other errors. See the syslog for more information. LustreError: 14351:0:(llite_lib.c:1043:ll_fill_super()) Unable to process log: -2 Lustre: Unmounted fsv-client LustreError: 14351:0:(obd_mount.c:1265:lustre_fill_super()) Unable to mount (-2)
Using git bisect I found the mount failure was introduced with this patch:
http://review.whamcloud.com/#change,5820
LU-2684 fid: unify ostid and FID
The critical questions at this point are:
- Can we solve this problem by updating both server and client to 2.3.64-4chaos?
- Can we safely upgrade the server, or does the above patch introduce on-disk format incompatibilities?
- Will we be able to safely revert the server to 2.3.63 in case we find problems, or will it write new objects in an incompatible format?
LLNL-bug-id: TOSS-2060
- is related to
-
LU-3294 osp_sync_llog_init(): ASSERTION( lgh != ((void *)0) ) failed
-
- Resolved
-